# ReadProgram-and-SendToArduino

./: .gitignore  CMakeLists.txt
setting/: setting.ini
src/: AsyncSerial.cpp  AsyncSerial.h  BufferedAsyncSerial.cpp  BufferedAsyncSerial.h  SimpleSerial.h  main.cpp  readsettingfile.cpp  readsettingfile.h
